--- a/Work/nam.css
+++ b/Work/nam.css
@@ -300,142 +300,193 @@ header{
                 display: inline; 
                 margin-left: 30px; ;
 }
+
 @media  (max-width : 1878px){
-
-
-.main2{
-                margin-top: 70px;
+header {
+                overflow-x: hidden;
 }
-.main_inter{
-                margin-top: 50px;
-                display: flex;
-                flex-wrap: wrap;
-                margin-left: 360px;
-       
+.vces {
+                margin-left: 160px;
 }
 .main_inter>div:nth-child(1){
-                border-right:4px solid #e5e5e5;
-                border-bottom:4px solid #e5e5e5;
-        
+                border: none;
 }
 .main_inter>div:nth-child(2){
-                border-bottom: 4px solid #e5e5e5;
-                border-right: none;
+                border: none;
 }
 .main_inter>div:nth-child(3){
-                border-right: 4px solid #e5e5e5;
-                border-bottom: 4px solid #e5e5e5;
+                border: none;
 }
-.main_inter>div:nth-child(4){
-                border-bottom: 4px solid #e5e5e5;
-                border-right: none;
+.main_inter>div:nth-child(4){ 
+                border: none;
 }
 .main_inter>div:nth-child(5){
-                border-bottom: none;
-                border-right: 4px solid #e5e5e5;
+                border: none;
 }
-     
-       
-}
-@media (max-width:1760px){
 
-
-.main_inter{
-                 margin-left: 300px;
-}
-.vces{
-                display: flex;
-                margin-left: 230px;
-                margin-top: 50px;
-}
-}
-@media (max-width:1600px){
-
-
-.main_inter{
-       
-                margin-left: 250px;
-       
-}
-.wrap1{
-                height: 400px;
-                min-width: 800px;
-                top: 90px;
-                left: 50px;
-                position: absolute;
-}
-    
 }
 @media (max-width:1500px){
+html{
+                width: 100%;
+                overflow-x: hidden;
+}
+header{
+                overflow-x: hidden;
+}
 
+.wrapChald:nth-child(1) {
+                margin-left: 98px;
+                width: 500px;
+                margin-right: 100px;
+}
 
-.wrap1{
-                height: 400px;
-                min-width: 800px;
-                top: 90px;
-                left: -160px;
-                position: absolute;
-}
-.vces{
-        
-                margin-left: 70px;
-                margin-top: 50px;
-}
-.main_inter{
-       
-                margin-left: 250px;
-                margin-bottom: 30px;
-        
-}
-}
-@media(max-width:1400px){
+                /* main */
 
-
-.vces{
-        
-                margin-left: 20px;
-                margin-top: 50px;
+.inter>p{
+                margin: 0 30px 0 30px;
 }
-.main2{
-                margin-top: auto;
-}
-.main{
-                height: 1700px;
+.main_inter {
+                margin: 80px auto;
+                width: 896px;
 }
 .main_inter>div{
-                flex-basis: 700px;
-                margin-bottom: 50px;
-                margin-left: 50px;
+                flex-basis: 440px;       
 }
 .main_inter>div:nth-child(1){
-                border-right: none;
-                border-bottom:4px solid #e5e5e5;
-        
+                border: none;
 }
 .main_inter>div:nth-child(2){
-                border-bottom: 4px solid #e5e5e5;
-                border-right: none;
+                border: none;
 }
 .main_inter>div:nth-child(3){
-                border-right: none;
-                border-bottom: 4px solid #e5e5e5;
+                border: none;
 }
-.main_inter>div:nth-child(4){
-                border-bottom: 4px solid #e5e5e5;
-                border-right: none;
+.main_inter>div:nth-child(4){ 
+                border: none;
 }
 .main_inter>div:nth-child(5){
-                border-bottom: 4px solid #e5e5e5;
-                border-right: none;
+                border: none;
 }
-.wrap1{
-                height: 400px;
-                min-width: 800px;
-                top: 90px;
-                left: -180px;
-                position: absolute;
+                            /* main2 */
+
+                
+.main2{
+                margin-top: 73px;
+                flex-wrap: wrap;
+                min-height: 730px;
+}   
+.main_one:first-child{
+                height: 200px;
+                margin-top: 30px;
+                margin-bottom: 30px;
 }
-     
+.main_one:last-child{
+                height: 500px;
+                margin-bottom: 50px;
+                margin-top: 0;
+}   
+                            /* main3 */
+.main3>p{
+                margin: 0 30px;
+}                       
+
+                        /* .main4 */
+.main4{
+                height: 1115px;
+}
+.vces {
+                margin-left: 21px;
+                flex-wrap: wrap;
+                justify-content: center;
+}
+.del>div{
+                margin-top: 15px;
+}
+.del:nth-child(3){
+                margin-top: 0px
+}                            
+
+
+}                           
+@media(max-width:1000px){
+html{
+                width: 100%;
+               
+    }
+body{
+     overflow-x: hidden;
+}
+header{
+                width: 100%;
+                overflow-x: hidden;
+}
+.wrapChald:nth-child(1) {
+                margin-left: -5px;
+                margin-right: 56px;
+}
+
+                            /* main */
+
+.inter {
+                 width: 100%;
+}
+.main_inter{
+                margin-left: 100px;
+                justify-content: center;
+                margin: 80px auto;
+                width: 896px;
+}
+.main_inter>div{
+                flex-basis: 440px;       
+}
+.main_inter>div:nth-child(1){
+                border: none;
+}
+.main_inter>div:nth-child(2){
+                border: none;
+}
+.main_inter>div:nth-child(3){
+                border: none;
+}
+.main_inter>div:nth-child(4){ 
+                border: none;
+}
+.main_inter>div:nth-child(5){
+                border: none;
+}
+
+                        /* main2 */
+                
+                
+.main2{
+                margin-top: 73px;
+                flex-wrap: wrap;
+                min-height: 700px;
+}   
+.main_one:first-child{
+                height: 200px;
+                margin-top: 30px;
+}
+.main_one:last-child{
+                height: 500px;
+                margin-bottom: 30px;
+}        
+                        /* main4     */
+
+.main4{
+                height: 1115px;
+}
+.vces {
+                margin-left: 21px;
+                flex-wrap: wrap;
+                justify-content: center;
+    }
+.del>div{
+                margin-top: 15px;
+}
+.del:nth-child(3){
+                margin-top: 0px
+}
 }
 @media (max-width:700px){
 
@@ -445,7 +496,7 @@ body{
                
 }
 header{
-     overflow-x: hidden;
+                overflow-x: hidden;
 }
 .wrap1{
                 height: 400px;
