--- a/Work/nam.css
+++ b/Work/nam.css
@@ -462,6 +462,7 @@ header{
                 margin-top: 73px;
                 flex-wrap: wrap;
                 min-height: 700px;
+                text-align: center;
 }   
 .main_one:first-child{
                 height: 200px;
@@ -530,7 +531,7 @@ header{
                 text-align: center;
 }
 .main{
-                height: 950px;
+                height: 700px;
                 
 }
 .inter>h3{
@@ -550,8 +551,7 @@ header{
                 width: 600px;
                 display: flex;
                 flex-wrap: wrap;
-                position: relative;
-                left: -270px;;
+                margin: 0 auto;
 }
 
   
@@ -569,7 +569,7 @@ header{
 
 .main2{
                 background-color: #e7e7e7;
-                min-height: 830px;
+                min-height: 930px;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -581,7 +581,7 @@ header{
 }
 .main_one:nth-child(2){
                 flex-basis: 336px;
-                margin: 30px auto;
+                margin: 200px auto 0;
 }
 .main_one>h3{
                 font-size:50px;
@@ -674,4 +674,9 @@ header{
 }
 
 
+}
+@media(max-width:400px){
+    .spic{
+        margin-top: 13px;
+    }
 }
