--- a/Work/nam.css
+++ b/Work/nam.css
@@ -21,12 +21,12 @@ header{
                 left: 100px;
                 position: absolute;
 }
-.wrapChald{
+/* .wrapChald{
                 width: auto;
-}
+} */
 .wrapChald:nth-child(1){
                 margin-left: 200px;
-                width: 500px;
+                width: 30%;
                 margin-right: 320px;
 }
 .wrapChald:nth-child(2){
@@ -489,190 +489,6 @@ header{
                 margin-top: 0px
 }
 }
-/* @media (max-width:700px){
-
-
-body{
-                min-width: 615px;
-                
-}
-header{
-                overflow-x: hidden;
-}
-.wrap1{
-                height: 400px;
-                display: flex;
-                justify-content: start;
-                top: 90px;
-                left: 0px;
-                position: relative;
-                width: 40px;
-                
-}
-.wrapChald:nth-child(1) {
-                margin-left: 10px;
-                width: 500px;
-                margin-right: 1px;
-}
-.wrapChald{
-                margin: none;
-                width: 100px;
-                position: relative;
-                
-}
-.wrapChald>div>p{
-                font-size: 34px;
-}
-.wrapChald>div>h1{
-                font-size: 122px;
-}
-.wrapChald>div{
-                width: 600px;
-                text-align: center;
-}
-.main{
-                height: 700px;
-                
-}
-.inter>h3{
-                margin-left: 32px;
-}
-.iconk{
-                justify-content: center;
-}
-.crew{
-                display: none;  
-}
-.vces{
-                display: flex;
-                flex-direction: column;
-}
-.main_inter{
-                width: 600px;
-                display: flex;
-                flex-wrap: wrap;
-                margin: 0 auto;
-}
-
-    
-.main_inter>div{
-                text-align: center;
-                flex-basis: 244px;
-                margin: none;
-}
-.main_inter>div:nth-child(6){
-                border-bottom: 4px solid #e5e5e5;
-}
-
-                            /* main2 */
-
-
-/* .main2{
-                background-color: #e7e7e7;
-                min-height: 930px;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                text-align: center;
-                
-}
-.main_one:first-child{
-                margin-top: 15px;
-}
-.main_one:nth-child(2){
-                flex-basis: 336px;
-                margin: 220px auto 0;
-}
-.main_one>h3{
-                font-size:50px;
-}
-.main_one>p{
-                font-size:26px;
-}
-.spic{
-                text-align: left;
-                font-size: 26px;
-}   
-
-                            /* main3 */
-
-/* 
-.main3>p{
-                font-size: 32px;
-}
-.main3>span{
-                font-size: 28px;
-
-}
-
-                            main4 */
-/* 
-.main4{
-                min-height:1420px;
-                position: relative;             
-}
-.main4>div>h3{       
-                font-size:50px;
-}
-.main4>div>p{
-                font-size: 26px;
-}
-.del>div{
-                width: 270px;
-                margin-bottom: 30px;         
-}
-.del>div>h5{
-                font-size:36px;
-}
-.cem>sup{
-                font-size:28px;
-}
-.Feature>p{
-                font-size:24px;
-                font-weight: 400;
-}
-.flotFea{
-                background-color: #3498db;
-                padding: 20px;
-}
-.flotFea>button{
-                padding: 15px;
-                font-size: 22px;
-}
-.vces{
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                justify-content: center;
-}
-.del:nth-child(3){
-                margin-top: 0px;
-                
-}
-     */
-                            /* main5 */
-
-/* 
-.main5>h5{
-                font-size:36px;         
-}
-.main5>p{
-                font-size:30px;
-}
-.main5>div>img{
-                background-color: rgb(168, 175, 195);
-                width: 40px;
-                height: 40px;
-                border-radius: 100%;
-}
-
-                    /* footer */
-
-
-/* .footer>ul>li{
-                font-size: 20px;
-}
-}  */
 
 @media (max-width:480px){
 
@@ -705,6 +521,7 @@ header{
 .wrapChald:nth-child(1) {
                 margin-left: 10px;
                 margin-right: 1px;
+                width: 50%;
 }
 .wrapChald{
                 margin: none;
@@ -723,6 +540,7 @@ header{
 }
 .wrapChald>div{
                 width: 290px;
+                margin: 0 auto;
                 text-align: center;
                 font-size: 20px;
 }
@@ -781,7 +599,7 @@ header{
                 flex-direction: column;
 }
 .main_one:first-child{
-                margin: 0 -4px 0 17px;;
+                margin: 0 auto;
 }
 .main_one:nth-child(2){
                 flex-basis: 162px;
@@ -890,6 +708,7 @@ header{
 .footer>ul{
                 padding-top: 15px;
                 width: 292px; 
+                margin: 0 auto;
 }
 .footer>ul>li{
                 font-size: 14px;
@@ -898,4 +717,26 @@ header{
 
 
 }
+@media(max-width:900px){
+    .main_inter{
+        width: 100%;
+        margin: 0 auto;
+        flex-wrap: wrap;
+        height: 40%;
+        overflow: scroll;
+    }
+    .main{
+        height: auto;
+    }
+    .main_inter>div{
+        margin:20px;
+        flex-basis: 200px;
+    }
+}
 
+@font-face{
+    font-family: 'Ravie';
+        src: url(./font/RAVIE.TTF);
+        font-weight: normal;
+        font-style: normal;
+}
